--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -50,7 +50,7 @@
                     <form class="form-horizontal" action="{% comment_form_target %}" method="post">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label for="input_title" class="pull-left control-label">评论标题：</label>
+                            <label for="input_title" class="pull-left control-label">评论标题:</label>
                             <div class="col-sm-6">
                                 <input class="form-control" name="comment_title" id="input_title" placeholder="请输入标题" required />
                             </div>
