--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -32,7 +32,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img src="{% static 'blog/images/Icon.jpg' %}"><span class="navbar-text">JCBlog</span> </a>
+      <a class="navbar-brand" href="/blog/"><img src="{% static 'blog/images/Icon.jpg' %}"><span class="navbar-text">JCBlog</span> </a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
