--- a/blog/templates/blog/reply.html
+++ b/blog/templates/blog/reply.html
@@ -28,13 +28,13 @@
         </div>
             <br />
         {% if request.session.login or request.user.is_authenticated %}
-            <div class="row" style="margin-left: 30px;">
+            <div class="row" style="margin-left: 10px;">
             <h3>回复&nbsp;&nbsp;&nbsp;{{ parent_comment.username }}{{ request.user }}&nbsp;&nbsp;&nbsp;的评论：</h3>
             {% get_comment_form for parent_comment.content_object as form %}
                     <form class="form-horizontal" action="{% comment_form_target %}" method="post">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label for="input_title" class="pull-left control-label">评论标题：</label>
+                            <label for="input_title" class="pull-left control-label">评论标题:</label>
                             <div class="col-sm-6">
                                 <input class="form-control" name="comment_title" id="input_title" placeholder="请输入标题" required />
                             </div>
